[package]
name = "AStarPathPlanning"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "2.0.0"
futures = "0.3"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
geo = "0.18.0"